02.23.2023 - fix desktop spacing

--- a/style/style.css
+++ b/style/style.css
@@ -199,7 +199,7 @@ nav {
     
     #mode-button {
         max-width: 55%;
-        transform: translate(100%,-305%);
+        transform: translate(100%, -308%);
     }
     #mode-button-one {
         width: 34vw;
@@ -315,7 +315,7 @@ nav {
     /* ------------------------------------------------------------ */
 
     #japanese {
-        max-width: 92%;
+        max-width: 65%;
         animation: japanese-in 1s both;
     }
     @keyframes japanese-in {
@@ -328,10 +328,10 @@ nav {
     }
 
     #nav-text {
-        transform: translate(-1.2%, -6%);
+        transform: translate(-8.2%, -5%);
     }
     #nav-name {
-        font-size: 12vw;
+        font-size: 10vw;
     }
     .nav-link {
         font-size: 5vw;
@@ -347,7 +347,7 @@ nav {
 
     #mode-button {
         max-width: 32%;
-        transform: translate(310%,-210%);
+        transform: translate(220%,-285%);
     }
     #mode-button-one {
         width: 9vw;
